--- a/1CheezEyez draft.ipynb
+++ b/1CheezEyez draft.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "2e35e2e8-e5d1-4ca9-b8f0-9d043cb7773c",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "fe493faf-594a-4abe-abdd-f1c3633caee4",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "1764515e-f001-4ab9-9b17-a5057548a3a1",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['1CheezEyez draft.ipynb', 'W3_meieri_DataImport_Denoising_Clustering.ipynb', 'cheese-single-end-demux.qza', 'food-metadata.tsv']\n"
+      "['Untitled.ipynb', 'CE_file_downloads.ipynb', '1CheezEyez draft.ipynb', 'metadata.ipynb', 'README.md', '.gitignore', 'testtestmilena.ipynb']\n"
      ]
     }
    ],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "2c88c441-a361-46f4-b7a8-53eef1d95ee1",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-10-05 10:16:44 URL:https://polybox.ethz.ch/index.php/s/2AYhc9EgbtA7wsE [13481/13481] -> \"/home/jovyan/CheezEyez/CheezEyez_data/cheese-single-end-demux.qza\" [1]\n"
+      "2022-10-12 08:33:44 URL:https://polybox.ethz.ch/index.php/s/2AYhc9EgbtA7wsE [13481/13481] -> \"CheezEyez_data/cheese-single-end-demux.qza\" [1]\n"
      ]
     }
    ],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "be5ad2f8-7fd3-45c9-8437-a39b314e7589",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "2f261475-d23f-4ac7-af2b-9b67086860bc",
    "metadata": {},
    "outputs": [
@@ -124,7 +124,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-10-05 10:34:21 URL:https://polybox.ethz.ch/index.php/s/nEd4l5CWGWGEtae [13436/13436] -> \"/home/jovyan/CheezEyez/CheezEyez_data/food-metadata.tsv\" [1]\n"
+      "2022-10-12 08:33:44 URL:https://polybox.ethz.ch/index.php/s/nEd4l5CWGWGEtae [13436/13436] -> \"CheezEyez_data/food-metadata.tsv\" [1]\n"
      ]
     }
    ],
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "6c66dc88-bcb7-4bf3-82c6-440d5cbed111",
    "metadata": {},
    "outputs": [
@@ -156,16 +156,29 @@
    "id": "c3d258e0-8f10-492b-a7c0-037c46a10de1",
    "metadata": {},
    "source": [
-    "test"
+    "data_dir"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "ac0caa26-f24c-42a1-85b2-db5ef2261883",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'CheezEyez_data'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_dir"
+   ]
   }
  ],
  "metadata": {
