create dataframe from tsv file

--- a/CE_file_downloads.ipynb
+++ b/CE_file_downloads.ipynb
@@ -80,7 +80,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-10-12 08:59:24 URL:https://polybox.ethz.ch/index.php/s/2AYhc9EgbtA7wsE/download [959420090/959420090] -> \"CE/cheese-single-end-demux.qza\" [1]\n"
+      "2022-10-12 09:33:12 URL:https://polybox.ethz.ch/index.php/s/2AYhc9EgbtA7wsE/download [959420090/959420090] -> \"CE/cheese-single-end-demux.qza\" [1]\n"
      ]
     }
    ],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "2f261475-d23f-4ac7-af2b-9b67086860bc",
    "metadata": {},
    "outputs": [
@@ -124,7 +124,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-10-12 08:59:26 URL:https://polybox.ethz.ch/index.php/s/nEd4l5CWGWGEtae/download [42810/42810] -> \"CE/food-metadata.tsv\" [1]\n"
+      "2022-10-12 09:33:24 URL:https://polybox.ethz.ch/index.php/s/nEd4l5CWGWGEtae/download [42810/42810] -> \"CE/food-metadata.tsv\" [1]\n"
      ]
     }
    ],
@@ -152,11 +152,13 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "c3d258e0-8f10-492b-a7c0-037c46a10de1",
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b7287891-12f6-4e14-9f38-7ac5799c080d",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "test"
+    "df_meta = pd.read_csv(f'{data_dir}/food-metadata.tsv', sep='\\t', index_col=0)"
    ]
   },
   {
