--- a/CE_file_downloads.ipynb
+++ b/CE_file_downloads.ipynb
@@ -162,9 +162,227 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "eaae5c4b-5240-43fd-9271-ac98ec7ef9b1",
+   "metadata": {},
+   "source": [
+    "### Denoising"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e0778ac-8167-4b81-aa93-a4348a90458b",
+   "metadata": {},
+   "source": [
+    "Visual summary of the QIIME Artifact without changes:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "233e6ff4-922d-4cec-84c1-b891e54ba6e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved Visualization to: CE/cheese-single-end-demux.qzv\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "! qiime demux summarize \\\n",
+    "    --i-data $data_dir/cheese-single-end-demux.qza \\\n",
+    "    --o-visualization $data_dir/cheese-single-end-demux.qzv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "154503e0-0214-4f84-9af5-716f7297f222",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><img onload=\"(function(div, url){\n",
+       "if (typeof require !== 'undefined') {\n",
+       "    var baseURL = require.toUrl('').split('/').slice(0, -2).join('/');\n",
+       "} else {\n",
+       "    var baseURL = JSON.parse(\n",
+       "        document.getElementById('jupyter-config-data').innerHTML\n",
+       "    ).baseUrl.slice(0, -1);\n",
+       "}\n",
+       "url = baseURL + url;\n",
+       "fetch(url).then(function(res) {\n",
+       "    if (res.status === 404) {\n",
+       "        div.innerHTML = 'Install QIIME 2 Jupyter extension with:<br />' +\n",
+       "                        '<code>jupyter serverextension enable --py qiime2' +\n",
+       "                        ' --sys-prefix</code><br />then restart your server.' +\n",
+       "                        '<br /><br />(Interactive output not available on ' +\n",
+       "                        'static notebook viewer services like nbviewer.)';\n",
+       "    } else if (res.status === 409) {\n",
+       "        div.innerHTML = 'Visualization no longer in scope. Re-run this cell' +\n",
+       "                        ' to see the visualization.';\n",
+       "    } else if (res.ok) {\n",
+       "        url = res.url;\n",
+       "        div.innerHTML = '<iframe src=\\'' + url + '\\' style=\\'' +\n",
+       "                        'width: 100%; height: 700px; border: 0;\\'>' +\n",
+       "                        '</iframe><hr />Open in a: <a href=\\'' + url + '\\'' +\n",
+       "                        ' target=\\'_blank\\'>new window</a>'\n",
+       "    } else {\n",
+       "        div.innerHTML = 'Something has gone wrong. Check notebook server for' +\n",
+       "                        ' errors.';\n",
+       "    }\n",
+       "});\n",
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-d8uxj34p')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+      ],
+      "text/plain": [
+       "<visualization: Visualization uuid: 6664996a-5750-4a8d-824a-d5bcf18eb17c>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Visualization.load(f'{data_dir}/cheese-single-end-demux.qzv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e66ef059-89f8-44f8-92b9-f75788958f0f",
+   "metadata": {},
+   "source": [
+    "Denoising:\n",
+    "    --p-trunc-len: the length of the reads will be truncated to 100bp (maybe use different truncating length? Max. length is 101)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ac0caa26-f24c-42a1-85b2-db5ef2261883",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved FeatureTable[Frequency] to: CE/dada2_table.qza\u001b[0m\n",
+      "\u001b[32mSaved FeatureData[Sequence] to: CE/dada2_rep_set.qza\u001b[0m\n",
+      "\u001b[32mSaved SampleData[DADA2Stats] to: CE/dada2_stats.qza\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "! qiime dada2 denoise-single \\\n",
+    "    --i-demultiplexed-seqs $data_dir/cheese-single-end-demux.qza \\\n",
+    "    --p-trunc-len 100 \\\n",
+    "    --p-n-threads 3 \\\n",
+    "    --o-table $data_dir/dada2_table.qza \\\n",
+    "    --o-representative-sequences $data_dir/dada2_rep_set.qza \\\n",
+    "    --o-denoising-stats $data_dir/dada2_stats.qza"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a26e5b7e-e911-4b5d-9011-c9d2490e4102",
+   "metadata": {},
+   "source": [
+    "Inspect denoising stats:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "5a040204-d2ef-4b5d-aee9-3bc371e6d14b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved Visualization to: CE/dada2_stats.qzv\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "! qiime metadata tabulate \\\n",
+    "    --m-input-file $data_dir/dada2_stats.qza \\\n",
+    "    --o-visualization $data_dir/dada2_stats.qzv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "31ba037a-b404-486d-812f-a3dd439d82f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><img onload=\"(function(div, url){\n",
+       "if (typeof require !== 'undefined') {\n",
+       "    var baseURL = require.toUrl('').split('/').slice(0, -2).join('/');\n",
+       "} else {\n",
+       "    var baseURL = JSON.parse(\n",
+       "        document.getElementById('jupyter-config-data').innerHTML\n",
+       "    ).baseUrl.slice(0, -1);\n",
+       "}\n",
+       "url = baseURL + url;\n",
+       "fetch(url).then(function(res) {\n",
+       "    if (res.status === 404) {\n",
+       "        div.innerHTML = 'Install QIIME 2 Jupyter extension with:<br />' +\n",
+       "                        '<code>jupyter serverextension enable --py qiime2' +\n",
+       "                        ' --sys-prefix</code><br />then restart your server.' +\n",
+       "                        '<br /><br />(Interactive output not available on ' +\n",
+       "                        'static notebook viewer services like nbviewer.)';\n",
+       "    } else if (res.status === 409) {\n",
+       "        div.innerHTML = 'Visualization no longer in scope. Re-run this cell' +\n",
+       "                        ' to see the visualization.';\n",
+       "    } else if (res.ok) {\n",
+       "        url = res.url;\n",
+       "        div.innerHTML = '<iframe src=\\'' + url + '\\' style=\\'' +\n",
+       "                        'width: 100%; height: 700px; border: 0;\\'>' +\n",
+       "                        '</iframe><hr />Open in a: <a href=\\'' + url + '\\'' +\n",
+       "                        ' target=\\'_blank\\'>new window</a>'\n",
+       "    } else {\n",
+       "        div.innerHTML = 'Something has gone wrong. Check notebook server for' +\n",
+       "                        ' errors.';\n",
+       "    }\n",
+       "});\n",
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-n8nz5k4d')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+      ],
+      "text/plain": [
+       "<visualization: Visualization uuid: 5ef8795e-f257-4588-8bcc-a13b5dbcd402>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Visualization.load(f'{data_dir}/dada2_stats.qzv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77cbf4f3-6cb9-4fc4-97cb-2c4d89691025",
+   "metadata": {},
+   "source": [
+    "Visualize feature table:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac0caa26-f24c-42a1-85b2-db5ef2261883",
+   "id": "181ca091-fc4c-430a-98f6-b5178900ef81",
    "metadata": {},
    "outputs": [],
    "source": []
