some notes for understanding

--- a/metadata.ipynb
+++ b/metadata.ipynb
@@ -807,7 +807,7 @@
     }
    ],
    "source": [
-    "df_metadata['region'].value_counts().plot(kind='bar', figsize=(14, 4))\n",
+    "df_metadata['region'].value_counts().plot(kind='bar', figsize=(14, 4)) #figsize is for changing size of figure\n",
     "plt.ylabel('Number of samples')\n",
     "plt.title('Region of Origin')\n",
     "plt.show()"
@@ -820,7 +820,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.set_option('display.max_rows', 62) #changes standard"
+    "pd.set_option('display.max_rows', 62) #changes standard of showing maximum of rows to 62 rows"
    ]
   },
   {
