Notes for next steps

--- a/metadata.ipynb
+++ b/metadata.ipynb
@@ -732,7 +732,9 @@
    "id": "37e98951-f47f-4e22-919c-3fc1036179d1",
    "metadata": {},
    "source": [
-    "**NOTE:** Most of samples do not have a value in this column. Only few have a notation about style. "
+    "**NOTE:** Most of samples do not have a value in this column. Only few have a notation about style. \n",
+    "--> maybe include bar for NA values ?\n",
+    "--> get rid of \"categorical\" bar"
    ]
   },
   {
