--- a/CE_file_downloads.ipynb
+++ b/CE_file_downloads.ipynb
@@ -54,7 +54,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['CE_file_downloads.ipynb', '1CheezEyez draft.ipynb', 'metadata.ipynb', 'README.md', '.gitignore']\n"
+      "['CE_file_downloads.ipynb', 'metadata.ipynb', 'README.md', '.gitignore']\n"
      ]
     }
    ],
@@ -80,7 +80,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-10-12 09:33:12 URL:https://polybox.ethz.ch/index.php/s/2AYhc9EgbtA7wsE/download [959420090/959420090] -> \"CE/cheese-single-end-demux.qza\" [1]\n"
+      "2022-10-14 12:24:43 URL:https://polybox.ethz.ch/index.php/s/2AYhc9EgbtA7wsE/download [959420090/959420090] -> \"CE/cheese-single-end-demux.qza\" [1]\n"
      ]
     }
    ],
@@ -98,7 +98,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cheese-single-end-demux.qza\n"
+      "cheese-single-end-demux.qza\n",
+      "food-metadata.tsv\n"
      ]
     }
    ],
@@ -116,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "2f261475-d23f-4ac7-af2b-9b67086860bc",
    "metadata": {},
    "outputs": [
@@ -124,7 +125,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-10-12 09:33:24 URL:https://polybox.ethz.ch/index.php/s/nEd4l5CWGWGEtae/download [42810/42810] -> \"CE/food-metadata.tsv\" [1]\n"
+      "2022-10-14 12:24:45 URL:https://polybox.ethz.ch/index.php/s/nEd4l5CWGWGEtae/download [42810/42810] -> \"CE/food-metadata.tsv\" [1]\n"
      ]
     }
    ],
@@ -153,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "b7287891-12f6-4e14-9f38-7ac5799c080d",
    "metadata": {},
    "outputs": [],
@@ -179,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "233e6ff4-922d-4cec-84c1-b891e54ba6e8",
    "metadata": {},
    "outputs": [
@@ -200,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "154503e0-0214-4f84-9af5-716f7297f222",
    "metadata": {},
    "outputs": [
@@ -237,19 +238,22 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-d8uxj34p')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-0emxg5q2')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
-       "<visualization: Visualization uuid: 6664996a-5750-4a8d-824a-d5bcf18eb17c>"
+       "<visualization: Visualization uuid: d9df4b14-7db8-42f8-9a9e-2526e7c599eb>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Visualization.load(f'{data_dir}/cheese-single-end-demux.qzv')"
+    "Visualization.load(f'{data_dir}/cheese-single-end-demux.qzv')\n",
+    "#Overview: normal distribution from 0 to almost 100000 with max at 100 Nr. of samples. \n",
+    "#Overview: Some random blocks to max 10 Nr. of samples between 100000-400000 nuber of sequences\n",
+    "#Interactive quality plot looks good! nothing under QS25! -> no need to trimm off less quality sequences :)"
    ]
   },
   {
@@ -258,26 +262,16 @@
    "metadata": {},
    "source": [
     "Denoising:\n",
-    "    --p-trunc-len: the length of the reads will be truncated to 100bp (maybe use different truncating length? Max. length is 101)"
+    "    --p-trunc-len: the length of the reads will be truncated to 100bp (maybe use different truncating length? Max. length is 101)\n",
+    "        **-> maybe don't even need to truncate due to high quality sequences :)**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "ac0caa26-f24c-42a1-85b2-db5ef2261883",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32mSaved FeatureTable[Frequency] to: CE/dada2_table.qza\u001b[0m\n",
-      "\u001b[32mSaved FeatureData[Sequence] to: CE/dada2_rep_set.qza\u001b[0m\n",
-      "\u001b[32mSaved SampleData[DADA2Stats] to: CE/dada2_stats.qza\u001b[0m\n",
-      "\u001b[0m"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "! qiime dada2 denoise-single \\\n",
     "    --i-demultiplexed-seqs $data_dir/cheese-single-end-demux.qza \\\n",
@@ -298,19 +292,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "5a040204-d2ef-4b5d-aee9-3bc371e6d14b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32mSaved Visualization to: CE/dada2_stats.qzv\u001b[0m\n",
-      "\u001b[0m"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "! qiime metadata tabulate \\\n",
     "    --m-input-file $data_dir/dada2_stats.qza \\\n",
