Feature table coding + visualizations
Comments about each table to know where to find everything without ultimate need to re-run everything. Easier for having an overview over what we already know.

--- a/CE_file_downloads.ipynb
+++ b/CE_file_downloads.ipynb
@@ -80,7 +80,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-10-14 12:24:43 URL:https://polybox.ethz.ch/index.php/s/2AYhc9EgbtA7wsE/download [959420090/959420090] -> \"CE/cheese-single-end-demux.qza\" [1]\n"
+      "2022-10-14 13:07:10 URL:https://polybox.ethz.ch/index.php/s/2AYhc9EgbtA7wsE/download [959420090/959420090] -> \"CE/cheese-single-end-demux.qza\" [1]\n"
      ]
     }
    ],
@@ -99,6 +99,7 @@
      "output_type": "stream",
      "text": [
       "cheese-single-end-demux.qza\n",
+      "cheese-single-end-demux.qzv\n",
       "food-metadata.tsv\n"
      ]
     }
@@ -125,7 +126,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-10-14 12:24:45 URL:https://polybox.ethz.ch/index.php/s/nEd4l5CWGWGEtae/download [42810/42810] -> \"CE/food-metadata.tsv\" [1]\n"
+      "2022-10-14 13:07:12 URL:https://polybox.ethz.ch/index.php/s/nEd4l5CWGWGEtae/download [42810/42810] -> \"CE/food-metadata.tsv\" [1]\n"
      ]
     }
    ],
@@ -144,6 +145,7 @@
      "output_type": "stream",
      "text": [
       "cheese-single-end-demux.qza\n",
+      "cheese-single-end-demux.qzv\n",
       "food-metadata.tsv\n"
      ]
     }
@@ -203,7 +205,9 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "154503e0-0214-4f84-9af5-716f7297f222",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -238,10 +242,10 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-0emxg5q2')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-5bci4lpy')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
-       "<visualization: Visualization uuid: d9df4b14-7db8-42f8-9a9e-2526e7c599eb>"
+       "<visualization: Visualization uuid: d6d29653-7297-4ac6-90dc-a4f0a9d85fe3>"
       ]
      },
      "execution_count": 10,
@@ -268,14 +272,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "ac0caa26-f24c-42a1-85b2-db5ef2261883",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved FeatureTable[Frequency] to: CE/dada2_table.qza\u001b[0m\n",
+      "\u001b[32mSaved FeatureData[Sequence] to: CE/dada2_rep_set.qza\u001b[0m\n",
+      "\u001b[32mSaved SampleData[DADA2Stats] to: CE/dada2_stats.qza\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
    "source": [
     "! qiime dada2 denoise-single \\\n",
     "    --i-demultiplexed-seqs $data_dir/cheese-single-end-demux.qza \\\n",
-    "    --p-trunc-len 100 \\\n",
+    "    --p-trunc-len 101 \\\n",
     "    --p-n-threads 3 \\\n",
     "    --o-table $data_dir/dada2_table.qza \\\n",
     "    --o-representative-sequences $data_dir/dada2_rep_set.qza \\\n",
@@ -287,15 +302,24 @@
    "id": "a26e5b7e-e911-4b5d-9011-c9d2490e4102",
    "metadata": {},
    "source": [
-    "Inspect denoising stats:"
+    "#### Inspect denoising stats:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "5a040204-d2ef-4b5d-aee9-3bc371e6d14b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved Visualization to: CE/dada2_stats.qzv\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
    "source": [
     "! qiime metadata tabulate \\\n",
     "    --m-input-file $data_dir/dada2_stats.qza \\\n",
@@ -304,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "id": "31ba037a-b404-486d-812f-a3dd439d82f6",
    "metadata": {},
    "outputs": [
@@ -341,19 +365,22 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-n8nz5k4d')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-ahtovguy')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
-       "<visualization: Visualization uuid: 5ef8795e-f257-4588-8bcc-a13b5dbcd402>"
+       "<visualization: Visualization uuid: 00498b98-0800-47f7-9681-f8ba77077c50>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Visualization.load(f'{data_dir}/dada2_stats.qzv')"
+    "Visualization.load(f'{data_dir}/dada2_stats.qzv')\n",
+    "#colums are: sample-id, input, filtered, percentage of input passed filter, \n",
+    "#denoised, non-chimeric, percentage of input non-chimeric\n",
+    "#downloaded as TSV file"
    ]
   },
   {
@@ -361,13 +388,187 @@
    "id": "77cbf4f3-6cb9-4fc4-97cb-2c4d89691025",
    "metadata": {},
    "source": [
-    "Visualize feature table:"
+    "#### Visualization resulting sequences:\n",
+    "- basic statistics about the identified features \n",
+    "- table mapping featured IDs to DNA sewquences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "181ca091-fc4c-430a-98f6-b5178900ef81",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved Visualization to: CE/dada2_rep_set.qzv\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "! qiime feature-table tabulate-seqs \\\n",
+    "    --i-data $data_dir/dada2_rep_set.qza \\\n",
+    "    --o-visualization $data_dir/dada2_rep_set.qzv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "1486a72d-9c7a-4d13-8bbe-a6ebb434788a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><img onload=\"(function(div, url){\n",
+       "if (typeof require !== 'undefined') {\n",
+       "    var baseURL = require.toUrl('').split('/').slice(0, -2).join('/');\n",
+       "} else {\n",
+       "    var baseURL = JSON.parse(\n",
+       "        document.getElementById('jupyter-config-data').innerHTML\n",
+       "    ).baseUrl.slice(0, -1);\n",
+       "}\n",
+       "url = baseURL + url;\n",
+       "fetch(url).then(function(res) {\n",
+       "    if (res.status === 404) {\n",
+       "        div.innerHTML = 'Install QIIME 2 Jupyter extension with:<br />' +\n",
+       "                        '<code>jupyter serverextension enable --py qiime2' +\n",
+       "                        ' --sys-prefix</code><br />then restart your server.' +\n",
+       "                        '<br /><br />(Interactive output not available on ' +\n",
+       "                        'static notebook viewer services like nbviewer.)';\n",
+       "    } else if (res.status === 409) {\n",
+       "        div.innerHTML = 'Visualization no longer in scope. Re-run this cell' +\n",
+       "                        ' to see the visualization.';\n",
+       "    } else if (res.ok) {\n",
+       "        url = res.url;\n",
+       "        div.innerHTML = '<iframe src=\\'' + url + '\\' style=\\'' +\n",
+       "                        'width: 100%; height: 700px; border: 0;\\'>' +\n",
+       "                        '</iframe><hr />Open in a: <a href=\\'' + url + '\\'' +\n",
+       "                        ' target=\\'_blank\\'>new window</a>'\n",
+       "    } else {\n",
+       "        div.innerHTML = 'Something has gone wrong. Check notebook server for' +\n",
+       "                        ' errors.';\n",
+       "    }\n",
+       "});\n",
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-ivt4wkxh')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+      ],
+      "text/plain": [
+       "<visualization: Visualization uuid: d48f9e9c-ea25-475f-8c8a-1b25aec9ea0b>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Visualization.load(f'{data_dir}/dada2_rep_set.qzv')\n",
+    "#Sequence Length Statistics\n",
+    "    #sequence count = 792, min and max length is 101\n",
+    "#Seven-Nr. Summary of Sequence Lengths\n",
+    "#Sequence table\n",
+    "    #Feature ID, Sequence length and Sequence"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf845420-baa7-4180-8a6b-0dc4b4d3529c",
+   "metadata": {},
+   "source": [
+    "#### Visualitazion of feature table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "8d759774-1800-45c0-b628-24e2ff7574b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved Visualization to: CE/dada2_table.qzv\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "! qiime feature-table summarize \\\n",
+    "    --i-table $data_dir/dada2_table.qza \\\n",
+    "    --o-visualization $data_dir/dada2_table.qzv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "0cb170ee-bd0d-412e-97ae-438640c1b8a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><img onload=\"(function(div, url){\n",
+       "if (typeof require !== 'undefined') {\n",
+       "    var baseURL = require.toUrl('').split('/').slice(0, -2).join('/');\n",
+       "} else {\n",
+       "    var baseURL = JSON.parse(\n",
+       "        document.getElementById('jupyter-config-data').innerHTML\n",
+       "    ).baseUrl.slice(0, -1);\n",
+       "}\n",
+       "url = baseURL + url;\n",
+       "fetch(url).then(function(res) {\n",
+       "    if (res.status === 404) {\n",
+       "        div.innerHTML = 'Install QIIME 2 Jupyter extension with:<br />' +\n",
+       "                        '<code>jupyter serverextension enable --py qiime2' +\n",
+       "                        ' --sys-prefix</code><br />then restart your server.' +\n",
+       "                        '<br /><br />(Interactive output not available on ' +\n",
+       "                        'static notebook viewer services like nbviewer.)';\n",
+       "    } else if (res.status === 409) {\n",
+       "        div.innerHTML = 'Visualization no longer in scope. Re-run this cell' +\n",
+       "                        ' to see the visualization.';\n",
+       "    } else if (res.ok) {\n",
+       "        url = res.url;\n",
+       "        div.innerHTML = '<iframe src=\\'' + url + '\\' style=\\'' +\n",
+       "                        'width: 100%; height: 700px; border: 0;\\'>' +\n",
+       "                        '</iframe><hr />Open in a: <a href=\\'' + url + '\\'' +\n",
+       "                        ' target=\\'_blank\\'>new window</a>'\n",
+       "    } else {\n",
+       "        div.innerHTML = 'Something has gone wrong. Check notebook server for' +\n",
+       "                        ' errors.';\n",
+       "    }\n",
+       "});\n",
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-x45xgqbl')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+      ],
+      "text/plain": [
+       "<visualization: Visualization uuid: 02e095d5-6da7-4545-ab0a-4de7e8a97f86>"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Visualization.load(f'{data_dir}/dada2_table.qzv')\n",
+    "#Overview\n",
+    "    #Table sumamry: 362 samples, 792 features, total frequency of 23'794'545\n",
+    "    #Frequency per sample, downloaded histogram as PDF\n",
+    "    #frequency per feature, histogram not downloaded\n",
+    "#Interactive sample detail\n",
+    "    #sampling depth bar\n",
+    "    #sample ID and Feature count table\n",
+    "#Feature Detail\n",
+    "    #ID as index, `corresponding frequency` and `#of samples observed in` as columns"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "181ca091-fc4c-430a-98f6-b5178900ef81",
+   "id": "f0275d25-1937-45e8-bc0c-7f2195767558",
    "metadata": {},
    "outputs": [],
    "source": []
