--- a/CE_file_downloads.ipynb
+++ b/CE_file_downloads.ipynb
@@ -5,22 +5,24 @@
    "id": "650df783-402a-428b-a3e8-7d3aab28dc72",
    "metadata": {},
    "source": [
-    "### import packages"
+    "### Run this cell :)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "2e35e2e8-e5d1-4ca9-b8f0-9d043cb7773c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Only need to rerun this cell once everything is downloaded:\n",
     "import os\n",
     "import pandas as pd\n",
     "from qiime2 import Visualization\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "data_dir = 'CE'"
    ]
   },
   {
@@ -203,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "154503e0-0214-4f84-9af5-716f7297f222",
    "metadata": {
     "tags": []
@@ -242,13 +244,13 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-5bci4lpy')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-gaae6vei')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
        "<visualization: Visualization uuid: d6d29653-7297-4ac6-90dc-a4f0a9d85fe3>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "31ba037a-b404-486d-812f-a3dd439d82f6",
    "metadata": {},
    "outputs": [
@@ -365,13 +367,13 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-ahtovguy')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-w3hv895j')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
        "<visualization: Visualization uuid: 00498b98-0800-47f7-9681-f8ba77077c50>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "1486a72d-9c7a-4d13-8bbe-a6ebb434788a",
    "metadata": {},
    "outputs": [
@@ -453,13 +455,13 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-ivt4wkxh')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-2pqpn1ck')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
        "<visualization: Visualization uuid: d48f9e9c-ea25-475f-8c8a-1b25aec9ea0b>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
