--- a/CE_file_downloads.ipynb
+++ b/CE_file_downloads.ipynb
@@ -54,7 +54,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['CE_file_downloads.ipynb', 'metadata.ipynb', 'README.md', '.gitignore']\n"
+      "['CE_file_downloads.ipynb', '1CheezEyez draft.ipynb', 'metadata.ipynb', 'README.md', '.gitignore']\n"
      ]
     }
    ],
@@ -80,7 +80,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-10-14 13:07:10 URL:https://polybox.ethz.ch/index.php/s/2AYhc9EgbtA7wsE/download [959420090/959420090] -> \"CE/cheese-single-end-demux.qza\" [1]\n"
+      "2022-10-26 09:46:02 URL:https://polybox.ethz.ch/index.php/s/2AYhc9EgbtA7wsE/download [959420090/959420090] -> \"CE/cheese-single-end-demux.qza\" [1]\n"
      ]
     }
    ],
@@ -98,9 +98,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cheese-single-end-demux.qza\n",
-      "cheese-single-end-demux.qzv\n",
-      "food-metadata.tsv\n"
+      "cheese-single-end-demux.qza\n"
      ]
     }
    ],
@@ -126,7 +124,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-10-14 13:07:12 URL:https://polybox.ethz.ch/index.php/s/nEd4l5CWGWGEtae/download [42810/42810] -> \"CE/food-metadata.tsv\" [1]\n"
+      "2022-10-26 09:46:05 URL:https://polybox.ethz.ch/index.php/s/nEd4l5CWGWGEtae/download [42810/42810] -> \"CE/food-metadata.tsv\" [1]\n"
      ]
     }
    ],
@@ -145,7 +143,6 @@
      "output_type": "stream",
      "text": [
       "cheese-single-end-demux.qza\n",
-      "cheese-single-end-demux.qzv\n",
       "food-metadata.tsv\n"
      ]
     }
@@ -242,10 +239,10 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-5bci4lpy')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-e12znnjp')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
-       "<visualization: Visualization uuid: d6d29653-7297-4ac6-90dc-a4f0a9d85fe3>"
+       "<visualization: Visualization uuid: 10eb2ca2-3d00-414f-9d9a-0f65b86d9cc2>"
       ]
      },
      "execution_count": 10,
@@ -272,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "ac0caa26-f24c-42a1-85b2-db5ef2261883",
    "metadata": {},
    "outputs": [
@@ -307,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "5a040204-d2ef-4b5d-aee9-3bc371e6d14b",
    "metadata": {},
    "outputs": [
@@ -328,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "31ba037a-b404-486d-812f-a3dd439d82f6",
    "metadata": {},
    "outputs": [
@@ -365,13 +362,13 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-ahtovguy')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-bmbugg_i')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
-       "<visualization: Visualization uuid: 00498b98-0800-47f7-9681-f8ba77077c50>"
+       "<visualization: Visualization uuid: 158c395d-66b8-4fb7-97fd-13b00d0c6020>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "181ca091-fc4c-430a-98f6-b5178900ef81",
    "metadata": {},
    "outputs": [
@@ -416,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "1486a72d-9c7a-4d13-8bbe-a6ebb434788a",
    "metadata": {},
    "outputs": [
@@ -453,13 +450,13 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-ivt4wkxh')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-jiy7phjh')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
-       "<visualization: Visualization uuid: d48f9e9c-ea25-475f-8c8a-1b25aec9ea0b>"
+       "<visualization: Visualization uuid: c6ec169e-15ce-48f1-8f91-faec26178757>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "id": "8d759774-1800-45c0-b628-24e2ff7574b8",
    "metadata": {},
    "outputs": [
@@ -504,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "id": "0cb170ee-bd0d-412e-97ae-438640c1b8a6",
    "metadata": {},
    "outputs": [
@@ -541,13 +538,13 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-x45xgqbl')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-3fb31clp')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
-       "<visualization: Visualization uuid: 02e095d5-6da7-4545-ab0a-4de7e8a97f86>"
+       "<visualization: Visualization uuid: fffc0df9-6c12-4ee8-8293-936b1ebf508d>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
