--- a/metadata.ipynb
+++ b/metadata.ipynb
@@ -583,6 +583,7 @@
     }
    ],
    "source": [
+    "# make sample-id to index and delete the numbers\n",
     "df_metadata.set_index('sample-id', inplace = True)\n",
     "display (df_metadata)\n"
    ]
@@ -615,7 +616,7 @@
     }
    ],
    "source": [
-    "\n",
+    "#see what type the different collums have, important for calculations \n",
     "print(df_metadata.dtypes)\n",
     "\n",
     "\n"
@@ -647,6 +648,16 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "195a2817-5743-4a35-a89c-9e38a25763f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#lets produce some plots to see whats the metadata about"
    ]
   },
   {
@@ -1010,6 +1021,7 @@
     }
    ],
    "source": [
+    "#some qestions and aswers\n",
     "print(\"What cheese types are most over-/underrepresented in your dataset?\")\n",
     "print(\"The biggest group builds the washed cheese followed by the natural cheese rindtype bloomy builds the last and less represented group\")\n",
     "print(\"Do you see a geographic skew?\")\n",
