--- a/denoising.ipynb
+++ b/denoising.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "2e35e2e8-e5d1-4ca9-b8f0-9d043cb7773c",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['CE_file_downloads.ipynb', 'metadata.ipynb', 'README.md', '.gitignore']\n"
+      "['denoising.ipynb', 'metadata.ipynb', 'README.md', '.gitignore', 'food-metadata.tsv']\n"
      ]
     }
    ],
@@ -82,7 +82,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-10-14 13:07:10 URL:https://polybox.ethz.ch/index.php/s/2AYhc9EgbtA7wsE/download [959420090/959420090] -> \"CE/cheese-single-end-demux.qza\" [1]\n"
+      "2022-10-31 10:29:44 URL:https://polybox.ethz.ch/index.php/s/2AYhc9EgbtA7wsE/download [959420090/959420090] -> \"CE/cheese-single-end-demux.qza\" [1]\n"
      ]
     }
    ],
@@ -100,9 +100,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cheese-single-end-demux.qza\n",
-      "cheese-single-end-demux.qzv\n",
-      "food-metadata.tsv\n"
+      "cheese-single-end-demux.qza\n"
      ]
     }
    ],
@@ -128,7 +126,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-10-14 13:07:12 URL:https://polybox.ethz.ch/index.php/s/nEd4l5CWGWGEtae/download [42810/42810] -> \"CE/food-metadata.tsv\" [1]\n"
+      "2022-10-31 10:29:46 URL:https://polybox.ethz.ch/index.php/s/nEd4l5CWGWGEtae/download [42810/42810] -> \"CE/food-metadata.tsv\" [1]\n"
      ]
     }
    ],
@@ -147,7 +145,6 @@
      "output_type": "stream",
      "text": [
       "cheese-single-end-demux.qza\n",
-      "cheese-single-end-demux.qzv\n",
       "food-metadata.tsv\n"
      ]
     }
@@ -205,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "154503e0-0214-4f84-9af5-716f7297f222",
    "metadata": {
     "tags": []
@@ -244,13 +241,13 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-gaae6vei')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-qj0rsrkc')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
-       "<visualization: Visualization uuid: d6d29653-7297-4ac6-90dc-a4f0a9d85fe3>"
+       "<visualization: Visualization uuid: a3c37c43-37b6-489d-aa45-9309813cda95>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "ac0caa26-f24c-42a1-85b2-db5ef2261883",
    "metadata": {},
    "outputs": [
@@ -309,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "5a040204-d2ef-4b5d-aee9-3bc371e6d14b",
    "metadata": {},
    "outputs": [
@@ -330,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "31ba037a-b404-486d-812f-a3dd439d82f6",
    "metadata": {},
    "outputs": [
@@ -367,13 +364,13 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-w3hv895j')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-jv8imbst')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
-       "<visualization: Visualization uuid: 00498b98-0800-47f7-9681-f8ba77077c50>"
+       "<visualization: Visualization uuid: 30442b98-317c-47f4-b922-579aed4ba619>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "181ca091-fc4c-430a-98f6-b5178900ef81",
    "metadata": {},
    "outputs": [
@@ -418,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "1486a72d-9c7a-4d13-8bbe-a6ebb434788a",
    "metadata": {},
    "outputs": [
@@ -455,13 +452,13 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-2pqpn1ck')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-s2i_veju')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
-       "<visualization: Visualization uuid: d48f9e9c-ea25-475f-8c8a-1b25aec9ea0b>"
+       "<visualization: Visualization uuid: 232537a2-2798-47c4-b550-10abb05bc8e6>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "id": "8d759774-1800-45c0-b628-24e2ff7574b8",
    "metadata": {},
    "outputs": [
@@ -506,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "id": "0cb170ee-bd0d-412e-97ae-438640c1b8a6",
    "metadata": {},
    "outputs": [
@@ -543,13 +540,13 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-x45xgqbl')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-jvc_ccvu')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
-       "<visualization: Visualization uuid: 02e095d5-6da7-4545-ab0a-4de7e8a97f86>"
+       "<visualization: Visualization uuid: dd1cd540-a25a-4394-b7dd-814a52e19d57>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
